creating the highlight elements and setting in the home page

--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
     <meta charset="utf-8">
     <title>proTECHtingUrGenes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 </head>
 
 <body>
     <!--COMMON TEMPLATE-->
+
     <div class="container" id="container">
         <div id="main">
-            <!-- HEADING -->
-            <div class="logo-wrapper">
-                <!-- Sector which contain logo+company name     -->
-                <div class="upp-upp-side">
-                    <!-- Upper-left part -->
-                    <header>
-                        <div class="brand">
-                            <!-- Company name -->
-                            <h1>proTECHtingUrGenes</h1>
-                        </div>
-                        <!-- #add the image of the logo with change color and subtittle -->
 
+
+            <!-- HEADING -->
+            <div class="banner">
+                <div class=banner-wrapper>
+                    <!-- Wrapper which contain logo+company name     -->
+                    <header>
+                        <div class="header-iner">
+                            <a href="index.html" id="logo">
+                                <img src="images/logo.jpg" alt="Company_logo" width="150" height="150">
+                            </a>
+                            <!-- Upper-left part -->
+
+                            <div class="brand">
+                                <!-- Company name -->
+                                <h1>proTECHtingUrGenes</h1>
+                            </div>
+                            <!-- #add the image of the logo with change color and subtittle -->
+                        </div>
                     </header>
                 </div>
             </div>
+
 
             <!-- NAVIGATION BAR -->
             <div class="nav-wrapper">
@@ -58,6 +68,7 @@
                     </div>
                 </div>
             </div>
+
             <!---Breadcrums---->
             <div class="breadcrumbs">
                 <ul class="breddcrums">
@@ -82,24 +93,56 @@
                     </li>
                 </ul>
             </div>
-        </div>
 
 
-        <!--SLIDER-->
-        <div class="sliderwraper">
-            <div class="slide-images">
-                <div class="img-container">
-                    <img src="images/sliderbusiness.jpg">
+
+
+
+
+            <!--Highlights-->
+            <div class="highlights">
+                <div class="icon-wrap">
+                    <h2>Highlights!</h2>
+                    <i class="fas fa-biohazard"></i>
+                    <h3>Your best vault</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
                 </div>
-                <div class="img-container">
-                    <img src="images/sliderservices.jpg">
+            </div>
+
+            <div class="highlights">
+                <div class="icon-wrap">
+                    <i class="fas fa-industry"></i>
+                    <h3>New office in Europe</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
                 </div>
-                <div class="img-container">
-                    <img src="images/sliderwork.jpg">
+            </div>
+
+            <div class="highlights">
+                <div class="icon-wrap">
+                    <i class="fas fa-award"></i>
+                    <h3>Pullitzer 2020</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque fuga adipisci maiores repudiandae inventore eaque quasi iure. Hic saepe tempore nam ut quis, illo ratione quo dolores sapiente, aliquid harum?</p>
+                </div>
+            </div>
+
+
+            <!--SLIDER-->
+            <div class="sliderwraper">
+                <div class="slide-images">
+                    <div class="img-container">
+                        <img src="images/sliderbusiness.jpg">
+                    </div>
+                    <div class="img-container">
+                        <img src="images/sliderservices.jpg">
+                    </div>
+                    <div class="img-container">
+                        <img src="images/sliderwork.jpg">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <footer id="footer">
 
