Embed video done yesterday, now I done with the company description

--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
     <div class="container" id="container">
         <div id="main">
             <!-- HEADING -->
-            <h1>about</h1>
             <div class="logo-wrapper">
                 <!-- Sector which contain logo+company name     -->
                 <div class="upp-upp-side">
@@ -85,8 +84,27 @@
                 </ul>
             </div>
 
+            <!--Who are us?-->
+            <div class="Who">
+                <h2>We are The Team!</h2>
+
+                <div class="about">
+                    <h3>Story</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque accusamus at asperiores, ipsam quidem aut! Nesciunt mollitia itaque tempora, autem repudiandae sit modi aspernatur corrupti, fugit earum excepturi voluptatum ex?</p>
+                </div>
+
+                <div class="about">
+                    <h3>Our values</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio laborum sunt ipsam delectus ad debitis.</p>
+                </div>
+
+                <div class="highlights">
+                    <h3>Our Mission</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ut molestias quam.</p>
+                </div>
+            </div>
             <!---Embeded Youtube Video --->
-            <iframe width=50% src="https://www.youtube.com/embed/ttjM-dMPddY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+            <iframe width=70% src="https://www.youtube.com/embed/ttjM-dMPddY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
 
         </div>
     </div>
