--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                     </div>
 
                     <div class="nav-link-wrapper">
+                        <a href="servicedetails.html">Services details</a>
+                    </div>
+
+                    <div class="nav-link-wrapper">
                         <a href="gallery.html">Gallery</a>
                     </div>
 
@@ -75,22 +79,23 @@
                     <li class="breadcrumbs__item">
                         <a href="" class="breadcrumbs__link--active">Home</a>
                     </li>
-
                     <li class="breadcrumbs__item">
                         <a href="" class="breadcrumbs__link">About us</a>
                     </li>
                     <li class="breadcrumbs__item">
                         <a href="" class="breadcrumbs__link">Services</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Gallery</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Customer attention</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <a href="" class="breadcrumbs__link">Contact us</a>
-                    </li>
+                        <li class="breadcrumbs__item">
+                            <a href="" class="breadcrumbs__link">Services</a>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <a href="" class="breadcrumbs__link">Services details</a>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <a href="" class="breadcrumbs__link">Customer attention</a>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <a href="" class="breadcrumbs__link">Contact us</a>
+                        </li>
                 </ul>
             </div>
 
