--- a/services.html
+++ b/services.html
@@ -13,7 +13,6 @@
     <div class="container" id="container">
         <div id="main">
             <!-- HEADING -->
-            <h1>services</h1>
             <div class="logo-wrapper">
                 <!-- Sector which contain logo+company name     -->
                 <div class="upp-upp-side">
@@ -66,7 +65,6 @@
                     <li class="breadcrumbs__item">
                         <a href="" class="breadcrumbs__link">Home</a>
                     </li>
-
                     <li class="breadcrumbs__item">
                         <a href="" class="breadcrumbs__link">About us</a>
                     </li>
@@ -84,6 +82,21 @@
                     </li>
                 </ul>
             </div>
+
+            <!--List of services-->
+            <ul>
+                <li>
+                    <h2>Service1</h2>
+                </li>
+                <li>
+                    <h2>Service2</h2>
+                </li>
+                <li>
+                    <h2>Service3</h2>
+                </li>
+            </ul>
+
+
         </div>
     </div>
     <footer id="footer">
